temporary add image link

--- a/src/applicants.json
+++ b/src/applicants.json
@@ -1,6 +1,7 @@
 [
   {
     "id": 0,
+    "image": "https://media.licdn.com/dms/image/C5603AQG0XdFys6AjQQ/profile-displayphoto-shrink_200_200/0?e=1554940800&v=beta&t=p0tk2xihGHIVUWB5NvDRVH-Lf827IMScyEBfZMjvZgc",
     "name": "Tyroo Doe",
     "email": "jdoe@gmail.com",
     "phone": "818-818-8118",
