--- a/src/applicants.json
+++ b/src/applicants.json
@@ -2,9 +2,13 @@
   {
     "id": 0,
     "image": "https://media.licdn.com/dms/image/C5603AQG0XdFys6AjQQ/profile-displayphoto-shrink_200_200/0?e=1554940800&v=beta&t=p0tk2xihGHIVUWB5NvDRVH-Lf827IMScyEBfZMjvZgc",
-    "name": "Tyroo Doe",
+    "name": "Tyroo West",
     "email": "jdoe@gmail.com",
     "phone": "818-818-8118",
+    "bio": "Born and raised in CA",
+    "github": "https://github.com/T-Wesst",
+    "title": "Full Stack Web Developer",
+    "portfolio": "https://t-wesst.github.io/",
     "linkedIn": "https://www.linkedin.com/in/tyroowest/"
   },
   {
